fixed bug where horiz scroll bar was always showing; the emscripten logo was sticking out on the right side. Finally!! I'd tweaked it cause the image has lots of space on the outside; now I just fix the vertical space.

--- a/src/App.scss
+++ b/src/App.scss
@@ -74,13 +74,21 @@ footer {
 {
 	float: right;
 	height: 100px;
-	margin: -31.25px -43.75px  // white border too wide
+	margin: -31.25px 0;
 }
-#webassemblyLogo, #webglLogo, #openglLogo
+#webassemblyLogo
 {
 	float: right;
 	height: 50px;
 	margin-right: 1em;
+}
+
+#webglLogo
+{
+	float: right;
+	height: 50px;
+	margin-right: 3em;
+	margin-top: -18px;
 }
 
 #traceOnScreen {
